--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -61,12 +61,12 @@
         visibility: visible;
       }
       #status {
-        height: 90%;
+        height: 100%;
         width: 100%;
         margin-bottom: 10%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
         visibility: visible;
       }
