Chino-Japones fallback font

--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -136,11 +136,11 @@
     </canvas>
     <div id="container">
       <div id = "logo">
-        <img src="index.png" alt="Loading logo">
+        <img src="bobo.gif" alt="Loading logo">
       </div>
       <div id="status">
         <div class="text-container" style="margin-bottom: 18px; visibility: visible">
-      <h1>Loading...</h1>
+      <h1>Burying Gold...</h1>
       </div>
         <!-- Indeterminate progress -->
         <div id="status-spinner" style="display: none"></div>
