--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -136,7 +136,7 @@
     </canvas>
     <div id="container">
       <div id = "logo">
-        <img src="loading.gif" alt="Loading logo">
+        <img src="loading.gif" alt="Loading logo" width="490px" height="432px">
       </div>
       <div id="status">
         <div class="text-container" style="margin-bottom: 18px; visibility: visible">
