--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -75,7 +75,6 @@
         height: 100%;
         width: 100%;
         margin-top: 10%;
-        left: 10px;
         justify-content: center;
         align-items: center;
         visibility: visible;
@@ -136,7 +135,7 @@
     </canvas>
     <div id="container">
       <div id = "logo">
-        <img src="loading.gif" alt="Loading logo" width="490px" height="432px">
+        <img src="loading.gif" alt="Loading logo" width="367px" height=" 324px" style="margin-left: 64px;">
       </div>
       <div id="status">
         <div class="text-container" style="margin-bottom: 18px; visibility: visible">
