--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -80,6 +80,7 @@
         visibility: visible;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 50px;
       }
 
       #status-progressbar {
