--- a/customWebExport/index.html
+++ b/customWebExport/index.html
@@ -141,6 +141,7 @@
       <div id="status">
         <div class="text-container" style="margin-bottom: 18px; visibility: visible">
       <h1>Burying Gold...</h1>
+      <h5>Game by the Yippies Dev</h5>
       </div>
         <!-- Indeterminate progress -->
         <div id="status-spinner" style="display: none"></div>
